Moved joins logic to QueryState component and added ability to remove selected columns

--- a/src/Joins/Joins.css
+++ b/src/Joins/Joins.css
@@ -15,3 +15,14 @@
     height: 15%;
 }
 
+.join-row {
+    text-align: center;
+}
+
+.delete-join-button {
+    float: right;
+}
+
+.join-image {
+    width: 10%;
+}
